--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p class="mt-4">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop. From <br class="hidden md:block"> classic <br  class="block md:hidden"> roses to exotic blooms, we offer a wide variety of <br class="block md:hidden"> fresh.</p></p>
 
         </div>
-        <div class=" grid grid-cols-2 gap-4 space-y-10 mt-15">
+        <div class=" grid grid-cols-2 gap-4 space-y-10 mt-15 md:grid-cols-4">
            <div class="max-w-2.3/10 ">
             <img  src="./assets/sample-flower-image.png" alt="flower pick">
             <h2 class="ml-18 text-[#111111] font-semibold">Lily Blossom</h2>
@@ -124,23 +124,23 @@
 
 <!-- Challenge section -->
 
- <section class="max-w-9/10 m-auto flex-col gap-10 justify-center items-center    mt-40">
+ <section class="max-w-9/10 m-auto block gap-10 justify-center items-center    mt-40 md:flex md:w-300 md:mt-30 md:gap-20">
    <div class="relative">
-          <img class="w-300 h-120" src="./assets/flower-store.png" alt="" >
+          <img class="w-300 h-120 md:w-350 md:h-140 " src="./assets/flower-store.png" alt="" >
           <img src="./assets/trusted-badge.png" alt="" class="hidden md:block absolute -top-29 -right-19 ml-50 w-70 h-70">
    </div>
 
   <div>
 
-    <h2 class="font-bold text-3xl  pb-2 mb-4 mt-4">Flower & Plants Lover</h2>
+    <h2 class="font-bold text-3xl  pb-2 mb-4 mt-4 md:text-6xl">Flower & Plants Lover</h2>
     <ul class="list-disc pl-5 space-y-3">
-        <li class="text-base text-[#8987A1]">Indulge your senses with the beauty and fragranc  of our fresh flower shop. <br> From classic roses to exotic blooms, we offer a wide variety of fresh.
+        <li class="text-base text-[#8987A1] md:text-2xl ">Indulge your senses with the beauty and fragranc  of our fresh flower shop. <br> From classic roses to exotic blooms, we offer a wide variety of fresh.
 
         </li>
-        <li class="text-base text-[#8987A1]">
+        <li class="text-base text-[#8987A1] md:text-2xl">
             Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
         </li>
-        <li class="textbase  text-[#8987A1]">
+        <li class="textbase  text-[#8987A1] md:text-2xl">
             Indulge your senses with the beauty and fragrance  of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
         </li>
 
@@ -157,17 +157,17 @@
 
 
 <div class="mt-20  text-center"> 
-    <h2 class="text-2xl font-bold"><span class="text-[#E95A08]">Latest</span>   Deals</h2>
-    <p class="pt-4 text-[#8987A1] text-base">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop.  From <br class="hidden md:block">classic <br class="block md:hidden"> roses to exotic blooms, we offer a wide variety of <br class="block md:hidden"> fresh.</p>
+    <h2 class="text-2xl font-bold md:text-6xl"><span class="text-[#E95A08]">Latest</span>   Deals</h2>
+    <p class="pt-4 text-[#8987A1] text-base md:text-2xl">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop.  From <br class="hidden md:block">classic <br class="block md:hidden"> roses to exotic blooms, we offer a wide variety of <br class="block md:hidden"> fresh.</p>
 </div>
 
 </div>
 
 
 <!-- Photo section -->
- <div class="flex flex-col mt-20 max-w-9/10 m-auto gap-5">
+ <div class="  mt-20 max-w-9/10 m-auto space-y-5 md:flex md:m-auto md:max-w-9/10  md:mt-30 ">
 
-  <div class=" space-y-3 relative">
+  <div class=" space-y-3 relative ">
     <div class="">
       <div>
     <h2 class="absolute text-[#FFFFFF] mt-20 ml-13 font-bold text-2xl">60% Off | Bloom Planta</h2>
@@ -184,9 +184,9 @@
 
   </div>
   <div class="">
-    <h2 class="absolute text-[#FFFFFF]  mt-25 ml-25 font-bold text-2xl">25% Off | Zabo Plant</h2>
+    <h2 class="absolute text-[#FFFFFF]  mt-20 ml-25 font-bold text-2xl">25% Off | Zabo Plant</h2>
     <button class="underline absolute text-[#FFFFFF] font-bold  mt-30 ml-25  text-3xl">Shop now</button>
-    <img src="./assets/deal-zabo.png" alt="" class=" w-93 rounded-xl  ml-4">
+    <img src="./assets/deal-zabo.png" alt="" class=" w-93 rounded-xl  ml-4 md:w-full md:h-300px md:ml=0">
 
   </div>
 
@@ -250,7 +250,7 @@ items-center">
             <li  class="mt-6 text-xl  text-[#8987A1]"><a href="">Help center</a></li>
         </ul>
     </div>
-    <div class="flex mb-40 gap-6 mt-6 mr-50 ">
+    <div class="flex pb-10 gap-6 mt-6 mr-50 ">
       <img class="" src="./assets/icon-linkedin.png" alt="">
       <img class="" src="./assets/icon-twitter.png" alt="" class="h-2 mt-2">
       <img class="" src="./assets/icon-facebook.png" alt="">
