--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <!-- Latest section  -->
 
 
-<div class="mt-40 max-w-9/10  ">
+<div class="mt-30 max-w-9/10  ">
 
 
 <div class="mt-20  text-center"> 
@@ -222,7 +222,7 @@ items-center">
 
 <!-- footer section -->
 
-<footer class="mt-20 max-w-9/10 h-[300px]  m-auto  md:flex   md:h-90  md:max-w-9/10 md:mx-20 md:gap-20 md:relative">
+<footer class="mt-20 max-w-9/10 h-[300px] pb-10  m-auto  md:flex   md:h-90  md:max-w-9/10 md:mx-20 md:gap-20 md:relative">
     <div class="md:w[300px]">
         <img class="max-h-40 mb-6 w-40 " src="./assets/name.png" alt="">
         <p class="text-xl  text-[#8987A1] pr-30 md:text-xl">Indulge your senses with the <br class="hidden md:block"> beauty and  fragrance of 
