--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
            
           </div>
           <div >
-            <img  src="./assets/l.jpg" alt="flower pick">
+            <img  src="./assets/L.jpg" alt="flower pick">
             <h2 class="ml-18 text-[#111111] font-semibold md:font-base md:text-2xl">Nice Flower</h2>
             <h3 class="ml-18 font-bold mb-4  md:pl-5 md:font-bold md:text-2xl">30 USD</h3>
             <button class="bg-[#E95A08] text-[#FFFFFF] font-bold px-5 py-1 w-full h-13 md:w-full">ADD TO CARD</button>
