add space remove

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <main class="max-w-9/10 m-auto mt-20">
         <div class="text-center mb-12">
             <h2 class="font-bold text-3xl md:text-5xl md:font-bold"><span class="text-[#E95A08]  ">Our Basic</span> Plan</h2>
-            <p class="mt-4 text-[#8987A1] md:text-xl">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop. From <br class="hidden md:block"> classic <br  class="block md:hidden"> roses to exotic blooms, we offer a wide variety of <br class="block md:hidden"> fresh.</p></p>
+            <p class="mt-4 text-[#8987A1] md:text-xl">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop. From  classic  roses to exotic blooms, we offer a wide variety of  fresh.</p></p>
 
         </div>
         <div class=" grid grid-cols-2 gap-8 space-y-10 mt-15 md:grid-cols-4">
@@ -194,7 +194,7 @@
 
 <div class="mt-20  text-center"> 
     <h2 class="text-2xl font-bold md:text-6xl "><span class="text-[#E95A08]">Latest</span>   Deals</h2>
-    <p class="pt-4 text-[#8987A1] text-base md:text-2xl md:mt-4">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop.  From <br class="hidden md:block">classic <br class="block md:hidden"> roses to exotic blooms, we offer a wide variety of  fresh.</p>
+    <p class="pt-4 text-[#8987A1] text-base md:text-2xl md:mt-4">Indulge your senses with the beauty and <br class="block md:hidden"> fragrance of our fresh flower shop.  From classic  roses to exotic blooms, we offer a wide variety of  fresh.</p>
 </div>
 
 </div>
