about section add

--- a/about.html
+++ b/about.html
@@ -42,7 +42,8 @@
     </nav>
      <h2 class="text-3xl font-bold text-pink-500 text-center mt-9">About us</h2> 
 
-     <div class="pl-1 mt-12">1. This is my wonderful website,yor can find here various kind of flower <br>
+     <div class="w-9/10 mx-auto">
+        <div class="pl-1 mt-12">1. This is my wonderful website,yor can find here various kind of flower <br>
      2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae libero rem a maxime cupiditate velit praesentium cum? Voluptates obcaecati nisi necessitatibus harum ea sapiente nostrum, porro ad iure accusantium est.
      <br>
      3. This is my wonderful website,yor can find here various kind of flower. Lorem ipsum, dolor sit amet consectetur adipisicing elit. A voluptatibus velit accusamus architecto quis officiis. Nostrum error laborum dolorem ipsum modi, numquam cumque labore ullam ad consectetur dolore odio fugiat.
@@ -50,6 +51,7 @@
      4. This is my wonderful website,yor can find here various kind of flower
      5. This is my wonderful website,yor can find here various kind of flower
     his is my wonderful website,yor can find here various kind of flower
+     </div>
      </div>
     
     
