add form section customize

--- a/index.html
+++ b/index.html
@@ -333,6 +333,8 @@
 
 <!-- Form section -->
 
+<div class="w-9/10 mx-auto">
+
 <div class="bg-[url(./assets/news-letter-bg.png)] bg-cover bg-no-repeat  
  h-70 md:h-125 md:w-full mt-20 mx-auto   flex justify-center
 items-center relative ">
@@ -345,6 +347,7 @@ items-center relative ">
     <div class="md:mt-25"><input class="  bg-[#FFFFFF] h-12 pl-5 mb-10 md:w-140 md:h-12.5 " type="email" placeholder="Write your Email"><button class="bg-[#E95A08] text-[#FFFFFF] h-12  w-27 font-bold   md:h-12.5 md:w-45 md:mt-12">Subscribe</button></div>
     
  </div>
+</div>
 </div>
 
 
